--- a/astro_demo/src/pages/index.astro
+++ b/astro_demo/src/pages/index.astro
@@ -15,6 +15,8 @@ import SONGS from '../assets/tmpSongs.json'
 			/>)}
 		</ul>
 	</main>
+	<a href='https://www.free-counters.org/'>https://www.free-Counters.org</a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=79e7e978a58408e8f8869bec26e84774f091413b'></script>
+	<script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/1049778/t/0"></script>
 </Layout>
 
 <style>
