identifier to projects

--- a/astro_demo/src/layouts/Layout.astro
+++ b/astro_demo/src/layouts/Layout.astro
@@ -22,7 +22,7 @@ const { title } = Astro.props;
 	<main>
 		<marquee class="intro" ><span class="text-gradient">Nicolas 90's Banger</span></marquee>
 		<Card
-			title="Willkommen!"
+			title="Willkommen! (Astro.js)"
 			body="... auf meiner kleinen Website fuer 90's Banger"
 		/>
 		<slot />
