--- a/next_demo/src/components/SongText/SongText.module.css
+++ b/next_demo/src/components/SongText/SongText.module.css
@@ -10,7 +10,7 @@
 }
 
 @media screen and (max-width: 800px) {
-    img{
+    .img{
         width: 250px;
         height: 250px;
     }
@@ -32,13 +32,13 @@
 }
 
 
-h2 {
+.h2 {
     margin: 0;
     font-size: 1.25rem;
     transition: color 0.6s cubic-bezier(0.22, 1, 0.36, 1);
     height: 3rem;
 }
-p {
+.p {
     margin-top: 0.5rem;
     margin-bottom: 0;
     color: #444;
