--- a/astro_demo/src/layouts/Layout.astro
+++ b/astro_demo/src/layouts/Layout.astro
@@ -10,7 +10,6 @@ const { title } = Astro.props;
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<link href="https://fonts.cdnfonts.com/css/i-hate-comic-sans-2" rel="stylesheet">
 		<meta charset="UTF-8" />
 		<meta name="description" content="Astro vs Next.js Vergleich. Kandidat Astro">
 		<meta name="viewport" content="width=device-width" />
@@ -34,7 +33,7 @@ const { title } = Astro.props;
 		background: #000;
 		--accent: 253, 224, 71;
 		--accent-gradient: linear-gradient(45deg, rgb(var(--accent)), #da62c4 30%, white 60%);
-		font-family: 'I hate Comic Sans', sans-serif;
+		font-family: 'Comic Sans MS', sans-serif;
 	}
 	main{
 		padding: 2rem;
