--- a/next_demo/src/app/globals.css
+++ b/next_demo/src/app/globals.css
@@ -8,6 +8,9 @@
   --accent-gradient: linear-gradient(45deg, rgb(var(--accent)), #da62c4 30%, white 60%);
   font-family: 'I hate Comic Sans', sans-serif;
 }
+@font-face {
+  font-family: 'I hate Comic Sans', sans-serif;
+}
 .main{
   padding: 2rem;
   max-width: 1024px;
