--- a/astro_demo/src/pages/index.astro
+++ b/astro_demo/src/pages/index.astro
@@ -15,8 +15,9 @@ import { Image } from '@astrojs/image/components';
 				href={title}
 				title={title}
 				body={artist}
+				client:load
 			>
-	<Image src={img} alt={title} format="webp" width="100" height="100" />
+	<!--<Image src={img} alt={title} width="100" height="100" />-->
 			</Card>)}
 		</ul>
 	</main>
