--- a/astro_demo/src/pages/index.astro
+++ b/astro_demo/src/pages/index.astro
@@ -4,7 +4,7 @@ import Card from '../components/Card';
 import Searchbar from "../components/Searchbar/Searchbar.astro";
 import fetchSongs from "../database/fetchSongs";
 const songs = fetchSongs();
-import { Image } from '@astrojs/image/components';
+import { Picture } from '@astrojs/image/components';
 ---
 
 <Layout title="Willkommen bei Nicolas Banger Sucher Webseite!.">
@@ -17,7 +17,7 @@ import { Image } from '@astrojs/image/components';
 				body={artist}
 				client:load
 			>
-	<!--<Image src={img} alt={title} width="100" height="100" />-->
+	<Picture src={img} alt={title} widths={[100]} heights={[100]} width="100" height="100" aspectRatio={4/3} />
 			</Card>)}
 		</ul>
 	</main>
