switch back to img

--- a/astro_demo/src/pages/index.astro
+++ b/astro_demo/src/pages/index.astro
@@ -17,7 +17,7 @@ import { Picture } from '@astrojs/image/components';
 				body={artist}
 				client:load
 			>
-	<Picture src={img} alt={title} widths={[100]} heights={[100]} width="100" height="100" aspectRatio={4/3} />
+	<img src={img} alt={title}  width="100" height="100" />
 			</Card>)}
 		</ul>
 	</main>
