--- a/astro_demo/src/pages/[id]/index.astro
+++ b/astro_demo/src/pages/[id]/index.astro
@@ -1,8 +1,16 @@
 ---
+import fetchSongs from "../../database/fetchSongs";
 import Layout from '../../layouts/Layout.astro';
 import SongText from '../../components/SongText/SongText.svelte'
 import fetchSong from "../../database/fetchSong";
 import {Song} from "../../interfaces/Song";
+
+export async function getStaticPaths() {
+       // url der seite
+       const ids =  fetchSongs().map((song)=> ({params: {id: song.title}}))
+       return ids
+    }
+
 const { id } = Astro.params
 const song: Song | undefined = fetchSong(id)
 ---
