--- a/astro_demo/src/pages/index.astro
+++ b/astro_demo/src/pages/index.astro
@@ -1,6 +1,7 @@
 ---
 import Layout from '../layouts/Layout.astro';
 import Card from '../components/Card';
+import { Image } from '@astrojs/image/components';
 import Searchbar from "../components/Searchbar/Searchbar.astro";
 import fetchSongs from "../database/fetchSongs";
 const songs = fetchSongs();
@@ -17,7 +18,7 @@ import ReactSearchbar from "../components/ReactSearchbar/Searchbar"
 				title={title}
 				body={artist}
 			>
-				<img src={img} alt={title}  width="100" height="100" />
+				<Image src={img} alt={title} format="webp" width="100" height="100" />
 			</Card>)}
 		</ul>
 	</main>
